[package]
name = "rust-template"
version = "0.0.0-develop"
authors = ["fg51 <zknsftk1msrk@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
thiserror = "1"
